# compiler-parser-example

./: CMakeLists.txt
examples/: CMakeLists.txt
examples/example/: CMakeLists.txt  code.h  main.cpp
examples/showcxxast/: CMakeLists.txt  code.h  main.cpp
src/: CMakeLists.txt
src/ast/: attr.h  attrkind.def  binaryoperatorkind.def  binaryoperatorkind.h  builtinmethodkind.def  builtinmethodkind.h  owership.h  param.h  paramqualifier.h  parsedexpr.h  precedence.h  semantickind.def  semantickind.h  templateargumentlist.h  templateargumentlistinfo.h  templateparamlist.h  typequalifier.h  unaryoperatorkind.def  unaryoperatorkind.h
src/basic/: diagnostickind.def  diagnostickind.h  diagnosticsengine.h  global.h  identifierloc.h  identifierpath.h  identifiertable.h  langoptions.h  moduledata.h  moduleloader.h  modulemanager.h  sourcelocation.h
src/lexer/: bytesparser.h  lexer.cpp  lexer.h  numericliteralparser.h  numericliteralprecison.def  numericliteralprecison.h  preprocessor.cpp  preprocessor.h  stringliteralencoding.def  stringliteralencoding.h  stringliteralparser.h  textualliteralparser.h  token.h  tokenkind.def  tokenkind.h  unicodecharsets.h
src/parser/: parser copy.h  parser.cpp  parser.h
src/semantics/: actionresult.h  builtin.h  builtincontext.h  builtinmethod.h  lookupresult.h  parsedattr.h  scope.h  sema.h
tests/: CMakeLists.txt
tests/lexer/: CMakeLists.txt  test_formatstring.cpp  test_lexblock.cpp  test_lexkeyword.cpp  test_lexprimative.cpp  test_lexsymbol.cpp
tests/parser/: CMakeLists.txt  decls.hy  stmts.hy  test_builtin.cpp  test_parsedecl.cpp
(+9 files in other folders)
